--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,19 @@ body {
   position: relative;
   border-radius: 10px;
 }
+.container2 {
+  background-color: white;
+  background-image: url("./images/bg.svg");
+  background-repeat: no-repeat;
+  width: 428px;
+  height: 926px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 20px auto;
+  position: relative;
+  border-radius: 10px;
+}
 
 .welcome {
   text-align: center;
@@ -186,7 +199,7 @@ input::placeholder {
   justify-content: space-between;
   align-items: center;
   margin: 20px auto;
-  border-bottom: 2px solid red;
+  border-bottom: 4px solid red;
 }
 .savemodal .input {
   border: none;
@@ -229,4 +242,16 @@ input::placeholder {
 }
 .scroll::-webkit-scrollbar {
   display: none;
+}
+.taskadded .arrow{
+  position: absolute;
+  left: 0;
+  margin: 20px 10px;
+  cursor: pointer;
+  background-color: #50b2b2;
+}
+.taskadded p {
+  position: relative;
+  top: 150px;
+  text-align: left;
 }
