--- a/src/App.css
+++ b/src/App.css
@@ -67,8 +67,8 @@ body {
   cursor: pointer;
   padding: 10px;
   border-radius: 15px 0 15px 0;
-  position: fixed;
-  bottom: 55px;
+  position: relative;
+  top: 200px;
 }
 .btn:hover {
   opacity: 0.7;
@@ -147,9 +147,8 @@ input::placeholder {
   z-index: 10;
   text-align: center;
   margin: 0 auto;
-  position: fixed;
-  left: 36%;
-  top: 73%;
+  position: relative;
+  top: 130px;
 }
 
 .popup li {
